<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDiary">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/diary"
            android:textColor="@color/white"
            android:textSize="18sp" />

       <ImageView
           android:id="@+id/ivDone"
           android:layout_width="wrap_content"
           android:layout_height="40dp"
           android:src="@drawable/ic_done"
           android:layout_alignParentEnd="true"
           android:layout_centerVertical="true"
           android:layout_marginEnd="20dp"
           android:contentDescription="TODO" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <EditText
            android:id="@+id/edTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/title"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/third" />

        <EditText
            android:id="@+id/edText"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_below="@id/edTitle"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_input"
            android:fontFamily="@font/poppins_medium"
            android:gravity="top"
            android:hint="@string/ketik"
            android:inputType="text|textMultiLine"
            android:justificationMode="inter_word"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/third" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:visibility="invisible"
        android:id="@+id/delBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/del_btn"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/delete_diary"
        android:textColor="@color/red"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3"
        app:layout_constraintVertical_bias="0.842" />
</androidx.constraintlayout.widget.ConstraintLayout>